fixed dark filter and background img overlapping

--- a/resources/assets/sass/_styles.scss
+++ b/resources/assets/sass/_styles.scss
@@ -1,6 +1,5 @@
 body{
   //background-color: #214b8c;
-  background-image: url("/img/zoetermeer.jpg");
 }
 
 h1{
@@ -10,7 +9,7 @@ h1{
 
 header{
   margin-top: 50px;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-image: url("/img/zoetermeer.jpg");
 }
 
 p{
@@ -26,4 +25,9 @@ p{
 
 .color-white{
   background-color:#fff!important;
+}
+
+.dark{
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0;
 }
